--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>ESE-2020 Frontend Scaffolding</span>
+    <span>better than ebay, bigger than jesus, more genius than kanye</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -23,7 +23,11 @@
   </mat-tab>
 
 
-  <mat-tab label="User Login Example">
+  <mat-tab label="User Login">
     <app-user-login></app-user-login>
+  </mat-tab>
+  <mat-tab label="User Registration">
+    <app-user-registration></app-user-registration>
+
   </mat-tab>
 </mat-tab-group>
