css for registration field class invalid-feedback

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>better than ebay, bigger than jesus, more genius than kanye</span>
+    <span>better than ebay</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
