it's not pretty but button does now work: only clickable if all forms are filled adequately

--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -46,7 +46,8 @@
 
     </mat-form-field>
 </mat-card>
-<p>Optional Data</p>
+
+<hr style="thin;text-align:left;margin-left:0">
 <mat-card>
     <mat-form-field>
       <input matInput placeholder="Gender" [(ngModel)]="gender" name="gender">
