--- a/frontend/src/app/user-login/user-login.component.html
+++ b/frontend/src/app/user-login/user-login.component.html
@@ -15,8 +15,7 @@
   <div *ngIf="loggedIn">
     <button mat-flat-button color="warn" (click)="logout()">Logout</button>
     You are currently logged in as {{ userName }}<br>
-    Are you Admin User?
-    {{isAdmin}}
+    Are you Admin User? {{isAdmin}}
 
   </div>
 </mat-card>
