again fixing input for backend

--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -60,19 +60,19 @@
 
 <mat-card>
   <mat-form-field>
-    <input matInput placeholder="Street" [(ngModel)]="street" name="street">
+    <input matInput placeholder="Street" [(ngModel)]="adressStreet" name="adressStreet">
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput placeholder="Zip code" [(ngModel)]="zipCode" name="zipCode">
+    <input matInput placeholder="Zip code" [(ngModel)]="adressPin" name="adressPin">
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput placeholder="City" [(ngModel)]="city" name="city">
+    <input matInput placeholder="City" [(ngModel)]="adressCity" name="adressCity">
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput placeholder="Country" [(ngModel)]="country" name="country">
+    <input matInput placeholder="Country" [(ngModel)]="adressCountry" name="adressCountry">
   </mat-form-field>
 
 
