displays now if admin or not and wich user is logged in

--- a/frontend/src/app/user-login/user-login.component.html
+++ b/frontend/src/app/user-login/user-login.component.html
@@ -11,13 +11,18 @@
 
   </div>
 
+
   <div *ngIf="loggedIn">
     <button mat-flat-button color="warn" (click)="logout()">Logout</button>
     You are currently logged in as {{ userName }}<br>
-    Are you Admin User? :{{isUser}} :
+    Are you Admin User? {{admin}}
 
 
   </div>
+
+
+  <h4>{{errorMessage}}</h4>
+
 </mat-card>
 
 <mat-card>
