--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -28,6 +28,10 @@
   </mat-tab>
   <mat-tab label="User Registration">
     <app-user-registration></app-user-registration>
-
+  </mat-tab>
+  <mat-tab label="Admin Panel">
+    <app-admin-panel></app-admin-panel>
   </mat-tab>
 </mat-tab-group>
+
+<app-product-list></app-product-list>
