comment out Todolist

--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <mat-list>
     <mat-list-item>-->
       <br>
-      <div><h1>Produce List</h1>
+      <div><h1>Product List</h1>
         <h4>Buy Fresh Fruit</h4>
       <img src="/assets/fresh_fruits.png" alt="Fresh Fruits To Buy">
       <div *ngIf="statusLoggedIn">
@@ -20,6 +20,6 @@
           <button mat-flat-button color="primary" (click)="buyProduct()">BUY</button>
         </div>
       </div>
-        <!--    </mat-list-item>
+    <!--</mat-list-item>
   </mat-list>
 </mat-card>-->
