--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
 <mat-divider></mat-divider>
 
 <mat-tab-group animationDuration="800ms">
-  <mat-tab label="Todo List Example">
+ <!-- <mat-tab label="Todo List Example">
     <mat-card>
       <mat-form-field>
         <input matInput placeholder="List Name" [(ngModel)]="newTodoListName" name="name">
@@ -21,8 +21,7 @@
       (delete)="onListDelete($event)"
     ></app-todo-list>
   </mat-tab>
-
-
+-->
   <mat-tab label="User Login">
     <app-user-login></app-user-login>
   </mat-tab>
