--- a/frontend/src/app/user-login/user-login.component.html
+++ b/frontend/src/app/user-login/user-login.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!loggedIn">
 
     <mat-form-field>
-      <input matInput placeholder="Email /Username" [(ngModel)]="userLogin" name="userLogin">
+      <input matInput placeholder="Username/ Email" [(ngModel)]="userLogin" name="userLogin">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password">
