modified prduct list to card

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>better than ebay</span>
+    <span>Better Than Ebay</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
