--- a/frontend/src/app/user-login/user-login.component.html
+++ b/frontend/src/app/user-login/user-login.component.html
@@ -15,10 +15,7 @@
 
 
   <div *ngIf="loggedIn">
-    You are currently logged in as {{ userName }}!
-    <p *ngIf="admin">
-    Are you Admin User? {{admin}}
-    </p>
+    You are currently logged in!
     <button mat-flat-button color="primary" (click)="logout()">Logout</button>
     <button mat-flat-button color="primary" (click)="refresh()">Refresh</button>
   </div>
