--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -84,7 +84,7 @@
   </ng-template>
   <ng-template #successMessage>
 
-    <div *ngIf="registrationComplete()" class="invalid-feedback"> Your registration is now complete
+    <div *ngIf="registrationComplete()" class="invalid-feedback"> Your registration is now complete!
     </div>
 
   </ng-template>
