--- a/frontend/src/app/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/admin-panel/admin-panel.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="admin">
   <mat-card>
-    <button mat-flat-button color="primary" (click)="getUserID()">Get Your UserId</button>
-    You're user ID is {{userId}}.
+    <button mat-flat-button color="primary" (click)="getUserID()">Get Your User Id</button>
+    You're user Id is {{userId}}.
   </mat-card>
 </div>
+
