--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -9,7 +9,7 @@
     <mat-form-field>
       <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password">
       <ng-template [ngIf]="empty(password)" [ngIfElse]="error">
-        <div class="invalid-feedback">Password is required</div>
+        <!--<div class="invalid-feedback">Password is required</div>-->
       </ng-template>
       <ng-template #error>
         <div *ngIf="!passwordContainsMixedLetters(password)" class="invalid-feedback"> Use capital and small letters
