added header component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,6 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Better Than Ebay</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<!-- header -->
+<app-header></app-header>
 
-<mat-divider></mat-divider>
 
 <mat-tab-group animationDuration="800ms">
  <!-- <mat-tab label="Todo List Example">
@@ -22,15 +18,9 @@
     ></app-todo-list>
   </mat-tab>
 -->
-  <mat-tab label="User Login">
-    <app-user-login></app-user-login>
-  </mat-tab>
-  <mat-tab label="User Registration">
-    <app-user-registration></app-user-registration>
-  </mat-tab>
-  <mat-tab label="Admin Panel">
-    <app-admin-panel></app-admin-panel>
-  </mat-tab>
-</mat-tab-group>
+
 
 <app-product-list></app-product-list>
+
+<!-- footer -->
+<app-footer></app-footer>
