--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div *ngIf="true">
-      <button mat-button>
+      <button mat-button [routerLink]="['./login']">
         <mat-icon >account_circle</mat-icon>
         Login
       </button>
