--- a/frontend/src/app/todo-list/todo-item/todo-item.component.html
+++ b/frontend/src/app/todo-list/todo-item/todo-item.component.html
@@ -1,7 +1,8 @@
+<p>A product item</p>
 <div class="shaded">
   <!-- Input field with item name -->
   <mat-form-field>
-    <input matInput placeholder="Item Name" [(ngModel)]="todoItem.name" (ngModelChange)="onItemUpdate()" name="name">
+    <input matInput placeholder="Product Item Name" [(ngModel)]="todoItem.name" (ngModelChange)="onItemUpdate()" name="name">
   </mat-form-field>
 
   <!-- Checkbox for item status -->
