--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,5 +1,33 @@
-<hr>
-<p>To Do:</p><br>
-<p>Conditions of Use, Help, Contact</p>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <div>
+      <button mat-button >
+        <mat-icon >article</mat-icon>
+        Conditions of Use
+      </button>
+    </div>
 
+    <div>
+      <button mat-button>
+        <mat-icon >article</mat-icon>
+        Imprint
+      </button>
+    </div>
+
+    <div>
+      <button mat-button>
+        <mat-icon >contact_page</mat-icon>
+        Contact
+      </button>
+    </div>
+
+
+    <div>
+      <button mat-button>
+        <mat-icon >contact_support</mat-icon>
+        Help
+      </button>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
 
