--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,8 +1,20 @@
-img {
-    max-width: 100%;
-    max-height: 100%;
+.logo {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+  display:block;
+}
+.spacer {
+  flex: 1 ;
+}
+.nav {
+  max-height:64px;
+  height: 64px;
+}
+.mat-storMain {
+  color: #b82d70;
 }
 
-.example-spacer {
-  flex: 1 1 auto;
+.mat-toolbar-row{
+  background-color: #d3d9ef;
 }
