--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,57 +1,33 @@
-
-<mat-toolbar>
+<mat-toolbar role="heading">
   <mat-toolbar-row>
-    <img src="assets/cd/logo_small.png" class="img" alt="Stor">
-    <img src="assets/cd/logo_font_only.png" class="img" alt="Stor">
-    <span class="example-spacer"></span>
-
-    <div *ngIf="true">
-      <button mat-button>
-        <mat-icon >account_circle</mat-icon>
-        Register
-      </button>
+    <div class="nav">
+      <a routerLink="/home">
+        <img src="assets/cd/logo_small.png" class="logo" alt="Stor">
+        <span class="example-spacer"></span>
+      </a>
     </div>
-
-    <div *ngIf="true">
-      <button mat-button [routerLink]="['./login']">
-        <mat-icon >account_circle</mat-icon>
-        Login
-      </button>
+    <div class="nav">
+      <a routerLink="/home">
+        <img src="assets/cd/logo_font_only.png"  class="logo" alt="Stor" />
+        <span class="example-spacer"></span>
+      </a>
     </div>
-
-
-    <div *ngIf="true">
-      <button mat-button>
-        <mat-icon >home</mat-icon>
-        Userdashboard
-      </button>
+    <span class="spacer"></span>
+    <div *ngIf="!isUserLoggedIn">
+      <button mat-button color="storMain" routerLink="/registration" routerLinkActive="active"><mat-icon >account_circle</mat-icon>Registration</button>
+      <button mat-button color="storMain" routerLink="/login" routerLinkActive="active"><mat-icon >account_circle</mat-icon>Login</button>
     </div>
-
+    <div *ngIf="isUserLoggedIn">
+      <button mat-button color="storMain" [matMenuTriggerFor]="menu"><mat-icon >home</mat-icon>User</button>
+    </div>
+    <mat-menu #menu>
+      <button mat-menu-item routerLink="/user" routerLinkActive="active">Dashboard</button>
+      <!--<div *ngIf="isAdmin">-->
+      <button mat-menu-item routerLink="/admin" routerLinkActive="active">Admin</button>
+      <!--</div>-->
+      <button mat-menu-item routerLink="/login" routerLinkActive="active">Logout</button>
+    </mat-menu>
   </mat-toolbar-row>
-
-
-
-
-
-
-
 </mat-toolbar>
+<router-outlet></router-outlet>
 
-<mat-divider></mat-divider>
-<mat-tab-group animationDuration="800ms">
-
-<mat-tab label="User Login">
-  <app-user-login></app-user-login>
-</mat-tab>
-
-
-
-<mat-tab label="User Registration">
-  <app-user-registration></app-user-registration>
-</mat-tab>
-
-<mat-tab label="Admin Panel">
-  <app-admin-panel></app-admin-panel>
-</mat-tab>
-<p>lalal</p>
-</mat-tab-group>
