--- a/frontend/src/app/product-list/product-item/product-item.component.html
+++ b/frontend/src/app/product-list/product-item/product-item.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
 
   <!-- Checkbox for item status -->
-  <mat-checkbox [(ngModel)]="productItem.approved" (ngModelChange)="onItemUpdate()">Done</mat-checkbox>
+  <mat-checkbox [(ngModel)]="productItem.isApproved" (ngModelChange)="onItemUpdate()">Done</mat-checkbox>
 
   <!-- Button to delete item -->
   <button mat-flat-button color="warn"  (click)="onItemDelete()">Delete Item</button>
