--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -3,63 +3,54 @@
   <h1>Product List</h1>
 </div>
 
+<div class="productList_dashboard" fxLayout="row" fxLayoutGap="16px" fxLayoutAlign="20%">
+<!--still figuring out how to use fxLayout-->
+  <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" fx.Flex.m="30%">
+    <!-- List of Mock Products-->
+    <mat-card *ngFor="let mockProduct of mockProductList">
+      <mat-card-header>
+        <!--<img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">-->
+        <mat-card-title>{{mockProduct.productName}}</mat-card-title>
+        <mat-card-subtitle>posted by {{mockProduct.userName}}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src={{mockProduct.productImage}} alt="Fresh Fruits To Buy">
+      <mat-card-content>
+        Category: {{mockProduct.productCategory}}
+        <br>
+        Description: {{mockProduct.productDescription}}
+        <br>
+        Service: {{mockProduct.isService}}
+        <br>
+        Location: {{mockProduct.productLocation}}
+        <br>
+        Price: {{mockProduct.productPrice}} CHF
+      </mat-card-content>
+      <mat-card-actions *ngIf="isUserLoggedIn">
+        <button mat-flat-button color="primary" (click)="buyProduct()">BUY</button>
+      </mat-card-actions>
+      <mat-card-footer>
+        Posted: {{mockProduct.uploadDate}}
+      </mat-card-footer>
+    </mat-card>
+  </div>
+</div>
+<!-- List of ProductItemComponents displaying all items of list -->
+<!--<mat-grid-tile class="productListItems" *ngFor="let productItem of productList.productItems">
+  <app-prodduct-item
+    [productItem]="productItem"
+    (update)="onItemUpdate($event)"
+    (delete)="onItemDelete($event)"
+  ></app-prodduct-item>
+</mat-grid-tile>-->
+
 <mat-card>
-
-
   <!-- Button to delete list -->
   <button mat-flat-button color="warn" (click)="onListDelete()" [disabled]="productList.productItems.length != 0">
     Delete list
   </button>
-
   <br>
-
   <!-- Input field for new product item name -->
-
-<!-- List of ProductItemComponents displaying all items of list -->
-<mat-list>
-  <mat-list-item *ngFor="let productItem of productList.productItems">
-    <app-prodduct-item
-      [productItem]="productItem"
-      (update)="onItemUpdate($event)"
-      (delete)="onItemDelete($event)"
-    ></app-prodduct-item>
-  </mat-list-item>
-</mat-list>
   <div *ngIf="productList.productItems.length === 0">No Products available.</div>
-
 </mat-card>
-
-
 
 <hr>
-
-<mat-card>
-  <mat-card-header>
-    <img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">
-    <mat-card-title>
-      <a href="">Buy Fresh Fruits</a></mat-card-title>
-    <mat-card-subtitle>posted by Nora</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="/assets/fresh_fruits.png" alt="Fresh Fruits To Buy">
-  <mat-card-content>
-    <p>I'm selling fresh fruits from my garden. Picked yesterday!!</p>
-  </mat-card-content>
-  <mat-card-actions *ngIf="statusLoggedIn">
-    <button mat-flat-button color="primary" (click)="buyProduct()">BUY</button>
-  </mat-card-actions>
-</mat-card>
-
-<mat-card>
-  <mat-card-header>
-    <img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">
-    <mat-card-title>Service for Shoveling Your Driveway</mat-card-title>
-    <mat-card-subtitle>posted by Nora</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="/assets/snow_shoveling.png" alt="Service for Shoveling Snow">
-  <mat-card-content>
-    <p>Winter is coming!! If you need someone to shovel your driveway, let me know.</p>
-  </mat-card-content>
-  <mat-card-actions *ngIf="statusLoggedIn">
-    <button mat-flat-button color="primary" (click)="buyProduct()">BUY</button>
-  </mat-card-actions>
-</mat-card>
