--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,33 +1,27 @@
-<mat-toolbar>
-  <mat-toolbar-row>
-    <div>
-      <button mat-button >
-        <mat-icon >article</mat-icon>
-        Conditions of Use
-      </button>
-    </div>
+ <mat-toolbar>
+    <mat-toolbar-row fxLayoutAlign="space-around">
 
-    <div>
-      <button mat-button>
-        <mat-icon >article</mat-icon>
-        Imprint
-      </button>
-    </div>
+        <button class="footer_button" mat-button>
+          <mat-icon >article</mat-icon>
+          Conditions of Use
+        </button>
 
-    <div>
-      <button mat-button>
-        <mat-icon >contact_page</mat-icon>
-        Contact
-      </button>
-    </div>
+        <button class="footer_button" mat-button>
+          <mat-icon >article</mat-icon>
+          Imprint
+        </button>
+
+        <button class="footer_button" mat-button>
+          <mat-icon >contact_page</mat-icon>
+          Contact
+        </button>
 
 
-    <div>
-      <button mat-button>
-        <mat-icon >contact_support</mat-icon>
-        Help
-      </button>
-    </div>
-  </mat-toolbar-row>
-</mat-toolbar>
+        <button class="footer_button" mat-button>
+          <mat-icon >contact_support</mat-icon>
+          Help
+        </button>
+
+    </mat-toolbar-row>
+  </mat-toolbar>
 
