--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!registeredIn">
+<div *ngIf="!isUserLoggedIn">
 <mat-card>
   <mat-form-field>
     <input matInput placeholder="Email" [(ngModel)]="userMail" name="userMail">
