--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,3 +1,18 @@
-.spacer {
-  flex: 1 1 auto;
+mat-toolbar{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: -30px;
+  background-color: aqua;
+}
+
+mat-toolbar-row{
+  padding: 0;
+  margin: 0;
+  background-color: #F0F0F0;
+}
+
+.footer_button{
+  padding: 5px;
+  margin: 10px;
 }
