--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -20,6 +20,16 @@
       </ng-template>
 
     </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Confirm Password" [(ngModel)]="cpassword" name="cpassword" type="password">
+    <ng-template [ngIf]="!empty(cpassword)">
+      <div *ngIf="!confirmPassword(cpassword)" class="invalid-feedback"> Passwords do not Match
+      </div>
+
+    </ng-template>
+
+  </mat-form-field>
     <br>
 
   <mat-form-field>
