--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,14 +1,12 @@
-mat-toolbar{
-  position: absolute;
+.footer{
+  position: fixed;
   bottom: 0;
   width: 100%;
-  margin: -30px;
-  background-color: aqua;
+  margin-left: -30px;
 }
 
 mat-toolbar-row{
   padding: 0;
-  margin: 0;
   background-color: #F0F0F0;
 }
 
