--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+<div class="footer">
  <mat-toolbar>
     <mat-toolbar-row fxLayoutAlign="space-around">
 
@@ -24,4 +25,4 @@
 
     </mat-toolbar-row>
   </mat-toolbar>
-
+</div>
