--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -14,20 +14,22 @@
     </div>
     <span class="spacer"></span>
     <div *ngIf="!isUserLoggedIn">
-      <button mat-button color="storMain" routerLink="/registration" routerLinkActive="active"><mat-icon >account_circle</mat-icon>Registration</button>
-      <button mat-button color="storMain" routerLink="/login" routerLinkActive="active"><mat-icon >account_circle</mat-icon>Login</button>
+      <button mat-button class="storMainColor" routerLink="/registration" routerLinkActive="active">Registration</button>
+      <button mat-button class="storMainColor" routerLink="/login" routerLinkActive="active"><mat-icon >account_circle</mat-icon>Login</button>
     </div>
     <div *ngIf="isUserLoggedIn">
-      <button mat-button color="storMain" [matMenuTriggerFor]="menu"><mat-icon >home</mat-icon>{{isUserName}}</button>
+      <button class="storMainColor" mat-button color="storMainColor" [matMenuTriggerFor]="menu"><mat-icon >account_circle</mat-icon>{{isUserName}}</button>
     </div>
     <mat-menu #menu>
-      <button mat-menu-item routerLink="/my-products" routerLinkActive="active">My Products</button>
       <button mat-menu-item routerLink="/user" routerLinkActive="active">My Profile</button>
-      <div *ngIf="isUserAdmin">
-      <button mat-menu-item routerLink="/admin" routerLinkActive="active">Admin</button>
-      </div>
       <button mat-menu-item routerLink="/login" routerLinkActive="active">Logout</button>
     </mat-menu>
+    <div *ngIf="isUserAdmin">
+      <button mat-button class="storMainColor" routerLink="/admin" routerLinkActive="active">Admin</button>
+    </div>
+    <div>
+      <mat-icon routerLink="/home" routerLinkActive="active" class="storMainColor">home</mat-icon>
+    </div>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
