--- a/frontend/src/app/user-registration/user-registration.component.css
+++ b/frontend/src/app/user-registration/user-registration.component.css
@@ -1,8 +1,7 @@
 .invalid-feedback {
-   color: #DA0B0B;
+   color: #B82D70;
+  /* dark red color: #8B0000; */
    }
 .valid-feedback{
   color: #3CAF19;
-}
-hr {
 }
