--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -1,13 +1,14 @@
 <div *ngIf="!isUserLoggedIn">
-<mat-card>
-  <mat-form-field>
-    <input matInput placeholder="Email" [(ngModel)]="userMail" name="userMail">
-    <div *ngIf="!emailFormat(userMail)" class="invalid-feedback">Email is required </div>
-
-  </mat-form-field>
+  <mat-card>
+    <mat-form-field>
+      <input matInput placeholder="Email*" [(ngModel)]="userMail" name="userMail">
+        <div *ngIf="!empty(userMail)">
+          <div *ngIf="!emailFormat(userMail)" class="invalid-feedback">Valid Email is required </div>
+        </div>
+    </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password">
+      <input matInput placeholder="Password*" [(ngModel)]="password" name="password" type="password">
       <ng-template [ngIf]="!empty(password)">
         <div *ngIf="!passwordContainsMixedLetters(password)" class="invalid-feedback"> Use capital and small letters
         </div>
@@ -22,69 +23,69 @@
     </mat-form-field>
     <br>
 
-  <mat-form-field>
-    <input matInput placeholder="User Name" [(ngModel)]="userName" name="userName" (change)="evaluate(userName)">
-
-    <div *ngIf="!evaluate(userName)" class="invalid-feedback">User Name is required </div>
-
-  </mat-form-field>
-
     <mat-form-field>
-      <input matInput placeholder="First Name" [(ngModel)]="firstName" name="firstName">
-      <div *ngIf="!evaluate(firstName)" class="invalid-feedback">First Name is required </div>
-
+      <input matInput placeholder="User Name*" [(ngModel)]="userName" name="userName" (change)="evaluate(userName)">
+      <!--<div *ngIf="empty(userName)" class="invalid-feedback">User Name is required </div>-->
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Last Name" [(ngModel)]="lastName" name="lastName">
-      <div *ngIf="!evaluate(lastName)" class="invalid-feedback">Last Name is required </div>
-
+      <input matInput placeholder="First Name*" [(ngModel)]="firstName" name="firstName">
+      <!--<div *ngIf="empty(firstName)" class="invalid-feedback">First Name is required </div>-->
     </mat-form-field>
-</mat-card>
 
-<hr>
-
-<mat-card>
     <mat-form-field>
-      <input matInput placeholder="Gender" [(ngModel)]="gender" name="gender">
+      <input matInput placeholder="Last Name*" [(ngModel)]="lastName" name="lastName">
+      <!--<div *ngIf="empty(lastName)" class="invalid-feedback">Last Name is required </div>-->
+    </mat-form-field>
+  </mat-card>
+
+  <hr>
+
+  <mat-card>
+    <mat-form-field appearance="fill">
+      <mat-label>Select Gender</mat-label>
+      <select matNativeControl [(ngModel)]="gender" value="gender">
+        <option value="female">female</option>
+        <option value="male">male</option>
+        <option value="undefined">undefined</option>
+      </select>
     </mat-form-field>
 
     <mat-form-field>
       <input matInput placeholder="Telephone Number" [(ngModel)]="telephoneNumber" name="telephoneNumber">
     </mat-form-field>
-</mat-card>
+  </mat-card>
 
-<mat-card>
-  <mat-form-field>
-    <input matInput placeholder="Street" [(ngModel)]="addressStreet" name="addressStreet">
-  </mat-form-field>
+  <mat-card>
+    <mat-form-field>
+      <input matInput placeholder="Street" [(ngModel)]="addressStreet" name="addressStreet">
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Zip code" [(ngModel)]="addressPin" name="addressPin">
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Zip code" [(ngModel)]="addressPin" name="addressPin">
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="City" [(ngModel)]="addressCity" name="addressCity">
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="City" [(ngModel)]="addressCity" name="addressCity">
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Country" [(ngModel)]="addressCountry" name="addressCountry">
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Country" [(ngModel)]="addressCountry" name="addressCountry">
+    </mat-form-field>
+  </mat-card>
 
-</mat-card>
+  <p>*Required Fields</p>
 
-<div>
-  <ng-template [ngIf]="!registrationComplete()" [ngIfElse]="successMessage">
+  <div>
+    <ng-template [ngIf]="!registrationComplete()" [ngIfElse]="successMessage">
+      <button mat-flat-button class="button_standard" (click)="registration()" [disabled]="!allFieldsAreFilled()">Registration</button>
+      <br>
+      {{userAuth}}
+    </ng-template>
 
-    <button mat-flat-button color="primary" (click)="registration()" [disabled]="!allFieldsAreFilled()">Registration</button>
-
-  </ng-template>
-  <ng-template #successMessage>
-
-    <div *ngIf="registrationComplete()" class="valid-feedback"> Your registration is now complete!
-    </div>
-
-  </ng-template>
-
-</div>
+    <ng-template #successMessage>
+      <div *ngIf="registrationComplete()" class="valid-feedback">
+      </div>
+    </ng-template>
+  </div>
 </div>
