--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -16,3 +16,7 @@ button, input {
 .mat-form-field-wrapper {
   margin-right: 25px !important;
 }
+
+.button_standard{
+  background-color: #D3D9EF;
+}
