fixes for pull request

--- a/frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -1,2 +1,4 @@
-<p>{{userId}}</p>
-<p>{{isLoggedIn}}</p>
+<h2>temporary</h2>
+<p>You are User nr: {{userId}}</p>
+
+<p>You are logged in: {{isLoggedIn}}</p>
